--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,6 @@
     -->
     <title>React App</title>
   </head>
-  <body style="font-family:'Jost', sans-serif; font-weight:400">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -45,3 +44,10 @@
     -->
   </body>
 </html>
+
+<style>
+@font-face {
+  font-family: title;
+  src: url(GT-Super-Display-Super-Trial.otf);
+}
+</style>
